--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="../favicon.ico" type="image/x-icon">
-  <title>Module 2 assignment - Roberto Sequeira</title>
+  <title>Module 2 solution - Young Kee Chae</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
