--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h3>Chicken</h3>
           </div>
           <p>
-            lorem ipsum dolor sit amet, consectetur adpisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ull므채 laboris nisi ut aliquip ex commodo consequat.
+            lorem ipsum dolor sit amet, consectetur adpisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex commodo consequat.
           </p>
         </div>
       </div>
@@ -27,7 +27,7 @@
           <h3>Beef</h3>
         </div>
         <p>
-          lorem ipsum dolor sit amet, consectetur adpisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ull므채 laboris nisi ut aliquip ex commodo consequat.
+          lorem ipsum dolor sit amet, consectetur adpisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex commodo consequat.
         </p>
       </div>
     </div>
@@ -37,7 +37,7 @@
         <h3>Sushi</h3>
       </div>
       <p>
-        lorem ipsum dolor sit amet, consectetur adpisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ull므채 laboris nisi ut aliquip ex commodo consequat.
+        lorem ipsum dolor sit amet, consectetur adpisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex commodo consequat.
       </p>
     </div>
   </div>
